Close streams in an orderly fashion, rather than Socket.close.
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@1176400 13f79535-47bb-0310-9956-ffa450edef68